// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createMarkdownCellTable headers matches snapshot 1`] = `
Array [
  "id",
  "name",
  "email",
]
`;

exports[`createMarkdownCellTable headers matches snapshot 2`] = `
Array [
  Array [
    "1",
    "John Doe",
    "john-doe@gmail.com",
  ],
  Array [
    "2",
    "Peter Smith",
    "petersmith22@outlook.com",
  ],
  Array [
    "3",
    "Julia Jones",
    "jjones778@gmail.com",
  ],
]
`;

exports[`full bound list matches snapshot 1`] = `
Array [
  Object {
    "email": "john-doe@gmail.com",
    "id": "1",
    "name": "John Doe",
  },
  Object {
    "email": "petersmith22@outlook.com",
    "id": "2",
    "name": "Peter Smith",
  },
  Object {
    "email": "jjones778@gmail.com",
    "id": "3",
    "name": "Julia Jones",
  },
]
`;

exports[`full bound object matches snapshot 1`] = `
MarkdownObjectTable {
  "cells": MarkdownCellTable {
    "headers": Array [
      "id",
      "name",
      "email",
    ],
    "rows": Object {},
  },
}
`;

exports[`iterate by chunks list matches snapshot 1`] = `
Array [
  Object {
    "email": "john-doe@gmail.com",
    "id": "1",
    "name": "John Doe",
  },
  Object {
    "email": "petersmith22@outlook.com",
    "id": "2",
    "name": "Peter Smith",
  },
  Object {
    "email": "jjones778@gmail.com",
    "id": "3",
    "name": "Julia Jones",
  },
]
`;

exports[`iterate by chunks object matches snapshot 1`] = `
MarkdownObjectTable {
  "cells": MarkdownCellTable {
    "headers": Array [
      "id",
      "name",
      "email",
    ],
    "rows": Object {},
  },
}
`;

exports[`iterate by lines list matches snapshot 1`] = `
Array [
  Object {
    "email": "john-doe@gmail.com",
    "id": "1",
    "name": "John Doe",
  },
  Object {
    "email": "petersmith22@outlook.com",
    "id": "2",
    "name": "Peter Smith",
  },
  Object {
    "email": "jjones778@gmail.com",
    "id": "3",
    "name": "Julia Jones",
  },
]
`;

exports[`iterate by lines object matches snapshot 1`] = `
MarkdownObjectTable {
  "cells": MarkdownCellTable {
    "headers": Array [
      "id",
      "name",
      "email",
    ],
    "rows": Object {},
  },
}
`;

exports[`left bound list matches snapshot 1`] = `
Array [
  Object {
    "email": "john-doe@gmail.com",
    "id": "1",
    "name": "John Doe",
  },
  Object {
    "email": "petersmith22@outlook.com",
    "id": "2",
    "name": "Peter Smith",
  },
  Object {
    "email": "jjones778@gmail.com",
    "id": "3",
    "name": "Julia Jones",
  },
]
`;

exports[`left bound object matches snapshot 1`] = `
MarkdownObjectTable {
  "cells": MarkdownCellTable {
    "headers": Array [
      "id",
      "name",
      "email",
    ],
    "rows": Object {},
  },
}
`;

exports[`no bound list matches snapshot 1`] = `
Array [
  Object {
    "email": "john-doe@gmail.com",
    "id": "1",
    "name": "John Doe",
  },
  Object {
    "email": "petersmith22@outlook.com",
    "id": "2",
    "name": "Peter Smith",
  },
  Object {
    "email": "jjones778@gmail.com",
    "id": "3",
    "name": "Julia Jones",
  },
]
`;

exports[`no bound object matches snapshot 1`] = `
MarkdownObjectTable {
  "cells": MarkdownCellTable {
    "headers": Array [
      "id",
      "name",
      "email",
    ],
    "rows": Object {},
  },
}
`;

exports[`right bound list matches snapshot 1`] = `
Array [
  Object {
    "email": "john-doe@gmail.com",
    "id": "1",
    "name": "John Doe",
  },
  Object {
    "email": "petersmith22@outlook.com",
    "id": "2",
    "name": "Peter Smith",
  },
  Object {
    "email": "jjones778@gmail.com",
    "id": "3",
    "name": "Julia Jones",
  },
]
`;

exports[`right bound object matches snapshot 1`] = `
MarkdownObjectTable {
  "cells": MarkdownCellTable {
    "headers": Array [
      "id",
      "name",
      "email",
    ],
    "rows": Object {},
  },
}
`;

exports[`unknown columns list matches snapshot 1`] = `
Array [
  Object {
    "email": "john-doe@gmail.com",
    "id": "1",
    "name": "John Doe",
    Symbol(Unknown Column #3): "123",
    Symbol(Unknown Column #4): "male",
    Symbol(Unknown Column #5): "true",
  },
  Object {
    "email": "petersmith22@outlook.com",
    "id": "2",
    "name": "Peter Smith",
  },
  Object {
    "email": "jjones778@gmail.com",
    "id": "3",
    "name": "Julia Jones",
    Symbol(Unknown Column #3): "12",
    Symbol(Unknown Column #4): "female",
  },
]
`;

exports[`unknown columns object matches snapshot 1`] = `
MarkdownObjectTable {
  "cells": MarkdownCellTable {
    "headers": Array [
      "id",
      "name",
      "email",
    ],
    "rows": Object {},
  },
}
`;
